<resources>
    <string name="app_name">Quiz App</string>

    <string name="next_button">Next</string>

    <string name="cheat_button">Cheat!</string>
    <string name="cheat_warning">Cheaters never win</string>
    <string name="cheat_shame">GO BRUSH UP ON SOME POKEMON FACTS</string>

    <string name="question_text1">Did Ash Ketchum, the main character, ever have a shiny Pokemon?</string>
    <string name="question_text1_hint">Ash Ketchum has a pokemon called Noctowl that was green.</string>
    <string name="question_text2">Does Pikachu have black at the end of his tail.</string>
    <string name="question_text2_hint">Mandela Effect and Pikachu has black tipped ears.</string>
    <string name="question_text3">Ash never gives Pikachu a thunderstone to evolve.</string>
    <string name="question_text3_hint">Pikachu loses a battle against a Gym Leaders Raichu.</string>
    <string name="question_text4">Pikachu loses a battle because of string shot.</string>
    <string name="question_text4_hint">In the Alola region Pikachu faces a bug pokemon in an unsuccessful attempted capture.</string>
    <string name="question_text5">Ash has a rival named Jerry.</string>
    <string name="question_text5_hint">He has a four letter name.</string>
    <string name="question_text6">What starter pokemon did Ash rescue from the rain</string>
    <string name="question_text6_hint">It was a fire type only pokemon.</string>
    <string name="question_text7">Which move does Pikachu not have?</string>
    <string name="question_text7_hint">Pikachu is an electric type pokemon.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>

    <string name="hint_text">Need Help?</string>
    <string name="check_button">Check</string>


    <string-array name="question_6_answers">
        <item>charmander</item>
        <item>Charmander</item>
    </string-array>
    <string-array name="question_7_answers">
        <item>Quick Attack</item>
        <item>Thunderbolt</item>
        <item>Extreme Speed</item>
        <item>Electroball</item>
    </string-array>

</resources>
