<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorBg"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_text1"
        android:textSize="30dp"
        android:textColor="@color/colorTxt"
        android:layout_marginBottom="32dp"
        android:layout_below="@id/score_view"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/score_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Score: 0"
        android:layout_above="@id/text_view"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        />


    <LinearLayout
        android:id="@+id/true_false_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBtnbg"
            android:text="@string/true_button"
            android:textColor="@color/colorBtn"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            />


        <Button
            android:id="@+id/false-button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBtnbg2"
            android:text="@string/false_button"
            android:textColor="@color/colorBtn"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fill_the_blank_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/check_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_button"/>
    </LinearLayout>

    <LinearLayout

        android:id="@+id/multiple_choice_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
        android:id="@+id/a_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/b_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/c_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/d_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        android:gravity="center"
        android:orientation="horizontal"
        <ImageButton
            android:layout_margin="10dp"
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"/>


        <ImageButton
            android:layout_margin="10dp"
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right"/>
        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        android:gravity="bottom"
        <Button
            android:id="@+id/hintTextResId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_text"
            android:textColor="@color/colorHelp"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"/>

    <Button
        android:id="@+id/end_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Finish"/>

</LinearLayout>